--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>org.beangle.commons.core</module>
     <module>org.beangle.commons.web</module>
     <module>org.beangle.commons.model</module>
+    <module>org.beangle.commons.jdbc</module>
   </modules>
 
   <description>
