--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <groupId>org.beangle.commons</groupId>
   <artifactId>beangle-commons-parent</artifactId>
   <packaging>pom</packaging>
+  <version>4.0.0-SNAPSHOT</version>
   <name>Beangle Commons Parent</name>
   
   <modules>
@@ -36,7 +37,6 @@
   </scm>
 
   <properties>
-    <spring.version>3.1.1.RELEASE</spring.version>
     <testng.version>6.5.2</testng.version>
     <javax.validation.version>1.0.0.GA</javax.validation.version>
   </properties>
@@ -56,12 +56,22 @@
       </dependency>
       <dependency>
         <groupId>org.beangle.commons</groupId>
-        <artifactId>beangle-commons-notification</artifactId>
+        <artifactId>beangle-commons-jdbc</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.beangle.commons</groupId>
+        <artifactId>beangle-commons-message</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.beangle.commons</groupId>
         <artifactId>beangle-commons-web</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.beangle.commons</groupId>
+        <artifactId>beangle-commons-transfer</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
