--- a/org.beangle.commons.web/pom.xml
+++ b/org.beangle.commons.web/pom.xml
@@ -5,9 +5,8 @@
     <version>4.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.beangle.commons</groupId>
   <artifactId>beangle-commons-web</artifactId>
-  <packaging>jar<!--bundle--></packaging>
+  <packaging>jar</packaging>
   <name>Beangle Commons Web</name>
 
   <properties>
