--- a/message/pom.xml
+++ b/message/pom.xml
@@ -6,7 +6,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>beangle-commons-message</artifactId>
-  <packaging>jar<!--bundle--></packaging>
+  <packaging>jar</packaging>
   <name>Beangle Commons Message</name>
 
   <properties>
