--- a/message/pom.xml
+++ b/message/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent</artifactId>
-    <version>4.0.1</version>
+    <version>4.0.2-SNAPSHOT</version>
   </parent>
   <artifactId>beangle-commons-message</artifactId>
   <packaging>jar</packaging>
