--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent</artifactId>
-    <version>4.0.x</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
   <artifactId>beangle-commons-web</artifactId>
   <packaging>jar</packaging>
