--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>16</version>
+    <version>17</version>
   </parent>
   <groupId>org.beangle.commons</groupId>
   <artifactId>beangle-commons-parent</artifactId>
@@ -35,8 +35,7 @@
   </scm>
 
   <properties>
-    <testng.version>6.5.2</testng.version>
-    <javax.validation.version>1.0.0.GA</javax.validation.version>
+    <javax.validation.version>1.1.0.Final</javax.validation.version>
   </properties>
 
   <dependencyManagement>
