--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent</artifactId>
-    <version>4.1.4-SNAPSHOT</version>
+    <version>4.1.4</version>
   </parent>
   <artifactId>beangle-commons-core</artifactId>
   <packaging>jar</packaging>
