--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.beangle.commons</groupId>
   <artifactId>beangle-commons-parent</artifactId>
   <packaging>pom</packaging>
-  <version>4.1.6</version>
+  <version>4.1.7-SNAPSHOT</version>
   <name>Beangle Commons Parent</name>
   
   <modules>
