--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent</artifactId>
-    <version>4.2.5</version>
+    <version>4.2.6-SNAPSHOT</version>
   </parent>
   <artifactId>beangle-commons-core</artifactId>
   <packaging>jar</packaging>
