--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,14 @@
   <groupId>org.beangle.commons</groupId>
   <artifactId>beangle-commons-parent_2.11</artifactId>
   <packaging>pom</packaging>
-  <version>4.3.1-SNAPSHOT</version>
+  <version>4.4.0-SNAPSHOT</version>
   <name>Beangle Commons Parent</name>
 
   <modules>
     <module>core</module>
+    <module>csv</module>
+    <module>i18n</module>
+    <module>text</module>
     <module>web</module>
   </modules>
 
