based on beangle 23.1

--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>22.4</version>
+    <version>23.1</version>
   </parent>
   <groupId>org.beangle.commons</groupId>
-  <artifactId>beangle-commons-parent_2.11</artifactId>
+  <artifactId>beangle-commons-parent_2.12</artifactId>
   <packaging>pom</packaging>
   <version>4.4.8-SNAPSHOT</version>
   <name>Beangle Commons Parent</name>
@@ -14,6 +14,7 @@
   <modules>
     <module>core</module>
     <module>csv</module>
+    <module>dbf</module>
     <module>i18n</module>
     <module>text</module>
     <module>web</module>
@@ -41,12 +42,12 @@
     <dependencies>
       <dependency>
         <groupId>org.beangle.commons</groupId>
-        <artifactId>beangle-commons-core_2.11</artifactId>
+        <artifactId>beangle-commons-core_2.12</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.beangle.commons</groupId>
-        <artifactId>beangle-commons-web_2.11</artifactId>
+        <artifactId>beangle-commons-web_2.12</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
