--- a/csv/pom.xml
+++ b/csv/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent_2.12</artifactId>
-    <version>4.4.8</version>
+    <version>4.4.9-SNAPSHOT</version>
   </parent>
   <artifactId>beangle-commons-csv_2.12</artifactId>
   <packaging>jar</packaging>
