--- a/text/pom.xml
+++ b/text/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent_2.12</artifactId>
-    <version>4.5.4-SNAPSHOT</version>
+    <version>4.5.4</version>
   </parent>
   <artifactId>beangle-commons-text_2.12</artifactId>
   <packaging>jar</packaging>
