--- a/model/pom.xml
+++ b/model/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent_2.12</artifactId>
-    <version>4.6.0-SNAPSHOT</version>
+    <version>4.6.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>beangle-commons-model_2.12</artifactId>
