--- a/model/pom.xml
+++ b/model/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent_2.12</artifactId>
-    <version>5.0.0.M2</version>
+    <version>5.0.0.M3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>beangle-commons-model_2.12</artifactId>
