--- a/csv/pom.xml
+++ b/csv/pom.xml
@@ -3,10 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.beangle.commons</groupId>
-    <artifactId>beangle-commons-parent_2.12</artifactId>
+    <artifactId>beangle-commons-parent_${scala.epoch}</artifactId>
     <version>5.1.8-SNAPSHOT</version>
   </parent>
-  <artifactId>beangle-commons-csv_2.12</artifactId>
+  <artifactId>beangle-commons-csv_${scala.epoch}</artifactId>
   <packaging>jar</packaging>
   <name>Beangle Commons Csv</name>
 
@@ -18,7 +18,7 @@
   <dependencies>
     <dependency>
       <groupId>org.beangle.commons</groupId>
-      <artifactId>beangle-commons-core_2.12</artifactId>
+      <artifactId>beangle-commons-core_${scala.epoch}</artifactId>
     </dependency>
   </dependencies>
 </project>
