--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.beangle.commons</groupId>
   <artifactId>beangle-commons-parent_2.13</artifactId>
   <packaging>pom</packaging>
-  <version>5.1.8</version>
+  <version>5.1.9-SNAPSHOT</version>
   <name>Beangle Commons Parent</name>
 
   <modules>
