rebase on jakarta servlet 5

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,8 +21,8 @@
       <artifactId>beangle-commons-core_2.13</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
     </dependency>
   </dependencies>
 </project>
