--- a/dbf/pom.xml
+++ b/dbf/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.beangle.commons</groupId>
     <artifactId>beangle-commons-parent_2.13</artifactId>
-    <version>5.2.0</version>
+    <version>5.2.1-SNAPSHOT</version>
   </parent>
   <artifactId>beangle-commons-dbf_2.13</artifactId>
   <packaging>jar</packaging>
